--- a/src/components/style/base.css
+++ b/src/components/style/base.css
@@ -1,18 +1,28 @@
 
-html, body, ul, li, ol, dl, dd, dt, p, h1, h2, h3, h4, h5, h6, form, fieldset, legend, img { margin:0; padding:0; }
+html, body, ul, li, ol, dl, dd, dt, p, h1, h2, h3, h4, h5, h6, form, fieldset, legend, img { 
+    margin:0; 
+    padding:0; 
+}
 body {
     line-height: 1.3;
     font-family: "iconfont", "robotoregular", "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "\5FAE\8F6F\96C5\9ED1", Arial, sans-serif;
 };
  /*去掉input等聚焦时的蓝色边框*/
-fieldset, img,input,button { border:none; padding:0;margin:0;outline-style:none; }  
-
-/* 去掉列表前小圆点 */
+fieldset, img,input,button { 
+    border:none;
+    padding:0;
+    margin:0;
+    outline-style:none; 
+}  
 ul, ol { list-style:none; }
 /*防止拖动*/
 textarea { resize:none; } 
 /* 去掉图片低测默认的3像素空白缝隙，或者用display：block也可以*/
-img {border:0; vertical-align:middle; }  
+img{
+    border:0; 
+    vertical-align:middle;
+}  
+ins,a {text-decoration:none;}
 
 /*文字排版*/
 .f12{font-size:12px;}
@@ -23,11 +33,9 @@ img {border:0; vertical-align:middle; }
 .fb{font-weight:bold}
 .fn{font-weight:normal;}
 .t2{text-indent:2em;}
-.lh150{line-height:150%;}
-.lh180{line-height:180%;}
-.lh200{line-height:200%;}
 .unl{text-decoration:underlline;}
 .no_unl{text-decoration:none;}
+
 /*定位*/
 .tl{text-align:left;}
 .tc{text-align:center;}
@@ -39,14 +47,22 @@ img {border:0; vertical-align:middle; }
 .cl{clear:left;}
 .cr{clear:rigth;}
 .clearfix:after,.clearfix:before{content:".";display:block;height:0;clear:both;visibility:hidden; *zoom: 1;}
-/* .vm{verticle-align:middle;} */
 .pr{position:relative;}
 .pa{position:absolute;}
+.pf{position:fixed;}
 .abs-right{position:absolute;right:0}
 .zoom{zoom:1;}
-/* .hidden{visiility:hidden;} */
 .none{display:none;}
 
+/* 不定宽高元素，上下左右居中 */
+.pc{
+    position:absolute;
+    left:0;
+    top:0;
+    right:0;
+    bottom:0;
+    margin:auto;
+}
 
 /*长度高度*/
 .w10{width:10px;}
@@ -85,6 +101,7 @@ img {border:0; vertical-align:middle; }
 .mt30{margin-top:30px;}
 .mt50{margin-top:50px;}
 .mt100{margin-top:100px;}
+
 .mb5{margin-bottom:5px;}
 .mb10{margin-bottom:10px;}
 .mb15{margin-bottom:15px;}
@@ -92,6 +109,7 @@ img {border:0; vertical-align:middle; }
 .mb30{margin-bottom:30px;}
 .mb50{margin-bottom:50px;}
 .mb100{margin-bottom:100px;}
+
 .ml5{margin-left:5px;}
 .ml10{margin-left:10px;}
 .ml15{margin-left:15px;}
@@ -99,6 +117,7 @@ img {border:0; vertical-align:middle; }
 .ml30{margin-left:30px;}
 .ml50{margin-left:50px;}
 .ml100{margin-left:100px;}
+
 .mr5{margin-right:5px;}
 .mr10{margin-right:10px;}
 .mr15{margin-right:15px;}
@@ -106,9 +125,11 @@ img {border:0; vertical-align:middle; }
 .mr30{margin-right:30px;}
 .mr50{margin-right:50px;}
 .mr100{margin-right:100px;}
+
 .p10{padding:10px;}
 .p15{padding:15px;}
 .p30{padding:30px;}
+
 .pt5{padding-top:5px;}
 .pt10{padding-top:10px;}
 .pt15{padding-top:15px;}
@@ -116,6 +137,7 @@ img {border:0; vertical-align:middle; }
 .pt30{padding-top:30px;}
 .pt50{padding-top:50px;}
 .pt100{padding-top:100px;}
+
 .pb5{padding-bottom:5px;}
 .pb10{padding-bottom:10px;}
 .pb15{padding-bottom:15px;}
@@ -123,6 +145,7 @@ img {border:0; vertical-align:middle; }
 .pb30{padding-bottom:30px;}
 .pb50{padding-bottom:50px;}
 .pb100{padding-bottom:100px;}
+
 .pl5{padding-left:5px;}
 .pl10{padding-left:10px;}
 .pl15{padding-left:15px;}
@@ -130,6 +153,7 @@ img {border:0; vertical-align:middle; }
 .pl30{padding-left:30px;}
 .pl50{padding-left:50px;}
 .pl100{padding-left:100px;}
+
 .pr5{padding-right:5px;}
 .pr10{padding-right:10px;}
 .pr15{padding-right:15px;}
